# openscreen

./: .gitignore  AGENTS.md  README.md  biome.json  electron-builder.json5  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
.qoder/plans/: DemoBuilder_UI_Restructure_ba0a5e4d.md  DemoBuilder_视频导出方案_3d7dd2ea.md  Remotion统一渲染架构重构_3d7dd2ea.md  demo-builder-zoom-annotation_a719ba6a.md
docs/: 01-overview.md  README.md
docs/01-getting-started/: 01-getting-started.md  02-installation-and-setup.md  03-development-environment.md
docs/02-architecture/: 01-ipc-communication-system.md  02-window-management-and-routing.md
docs/03-recording/: 01-screen-recording-system.md  02-recording-workflow-and-controls.md  03-cursor-telemetry-system.md
docs/04-video-editor/: 01-video-editor-component-and-state-management.md  02-settings-panel-and-configuration-ui.md  03-video-playback-system.md
docs/05-export/: 01-export-pipeline-architecture.md
docs/dev/: aliyun-tts-api.md
docs/engineering/: macos-native-recorder-roadmap.md
electron/: electron-env.d.ts  globalShortcut.ts  main.ts  preload.ts  windows.ts
electron/ipc/: handlers.ts  nativeBridge.ts  recordingStream.ts
electron/native/: README.md
electron/native/wgc-capture/: CMakeLists.txt
electron/native/wgc-capture/src/: main.cpp
electron/recording/: webm-duration.ts
nix/: package.nix
scripts/: before-pack.cjs  build-macos-screencapturekit-helper.mjs  fetch-caption-model.mjs
src/: App.tsx  index.css
src/contexts/: I18nContext.tsx
src/hooks/: audioPeaksWorker.ts  recorderHandle.ts  useAudioPeaks.ts  useCameraDevices.test.ts  useCameraDevices.ts  useEditorHistory.ts  (+1 more)
(+248 files in other folders)
